// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert component should match snapshot when success prop is false 1`] = `
<DocumentFragment>
  <div
    class="alert alert-error"
  >
    Error!
  </div>
</DocumentFragment>
`;

exports[`Alert component should match snapshot when success prop is true 1`] = `
<DocumentFragment>
  <div
    class="alert alert-success"
  >
    Success!
  </div>
</DocumentFragment>
`;
